Bug 1667408 - Don't right-align column names in about:processes;r=florian
Differential Revision: https://phabricator.services.mozilla.com/D94941

UltraBlame original commit: 47c71fa63229473bf9bf8e4670469fbd231344d3

--- a/toolkit/components/aboutprocesses/content/aboutProcesses.css
+++ b/toolkit/components/aboutprocesses/content/aboutProcesses.css
@@ -49,24 +49,28 @@ tr {
 
 
 td:nth-child(2) {
-  width:  15%;
+  width: 15%;
+}
+#process-tbody td:nth-child(2) {
   
 
 
 
 
-  text-align: right;
+  text-align: end;
 }
 
 
 td:nth-child(3) {
   width: 15%;
+}
+#process-tbody td:nth-child(3) {
   
 
 
 
 
-  text-align: right;
+  text-align: end;
 }
 
 
